--- a/_includes/index/carousel.html
+++ b/_includes/index/carousel.html
@@ -17,7 +17,7 @@
     
 {%- endcomment -%}
 
-{%- assign image-items = site.data[site.metadata ] | where_exp: "item","item.format contains 'image'" -%}
+{%- assign image-items = site.data[site.metadata ] | where_exp: "item","item.format contains 'pdf'" -%}
 {%- assign youtube-items = site.data[site.metadata ] | where_exp: "item","item.youtubeid" -%}
 {%- if youtube-items -%}{%- assign carousel-items = image-items | concat: youtube-items -%}{%- else -%}{%- assign carousel-items = image-items -%}{% endif %}
 {%- assign carousel-max = include.max | default: 9 -%}
